--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.4",
     "simple-flexbox": "^1.2.0"
   },
